5.1
===

* Added irc/server.py, based on hircd by Ferry Boender.

5.0
===

Another backward-incompatible change. In irc 5.0, many of the unnecessary
getter functions have been removed and replaced with simple attributes. This
change addresses issue #2. In particular:

 - Connection._get_socket() -> Connection.socket (including subclasses)
 - Event.eventtype() -> Event.type
 - Event.source() -> Event.source
 - Event.target() -> Event.target
 - Event.arguments() -> Event.arguments

The `nm_to_*` functions were removed. Instead, use the NickMask class
attributes.

These deprecated function aliases were removed from irc.client::

 - parse_nick_modes -> modes.parse_nick_modes
 - parse_channel_modes -> modes.parse_channel_modes
 - generated_events -> events.generated
 - protocol_events -> events.protocol
 - numeric_events -> events.numeric
 - all_events -> events.all
 - irc_lower -> strings.lower

Also, the parameter name when constructing an event was renamed from
`eventtype` to simply `type`.

4.0
===

* Removed deprecated arguments to ServerConnection.connect. See notes on the
  3.3 release on how to use the connect_factory parameter if your application
  requires ssl, ipv6, or other connection customization.

3.6.1
=====

* Filter out disconnected sockets when processing input.

3.6
===

* Created two new exceptions in `irc.client`: `MessageTooLong` and
  `InvalidCharacters`.
* Use explicit exceptions instead of ValueError when sending data.

3.5
===

* SingleServerIRCBot now accepts keyword arguments which are passed through
  to the `ServerConnection.connect` method. One can use this to use SSL for
  connections::

    factory = irc.connection.Factory(wrapper=ssl.wrap_socket)
    bot = irc.bot.SingleServerIRCBot(..., connect_factory = factory)


3.4.2
=====

* Issue #6: Fix AttributeError when legacy parameters are passed to
  `ServerConnection.connect`.
* Issue #7: Fix TypeError on `iter(LineBuffer)`.

3.4.1
=====
